@@ -101,6 +101,7 @@
     <Compile Include="QNX6.cs" />
     <Compile Include="JFS.cs" />
     <Compile Include="F2FS.cs" />
+    <Compile Include="NILFS2.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
