@@ -1,5 +1,9 @@
 2016-09-02  Natalia Portillo  <claunia@claunia.com>
 
+	* DateHandlers.cs: Adds support for NILFS2 filesystem.
+
+2016-09-02  Natalia Portillo  <claunia@claunia.com>
+
 	* DateHandlers.cs: Add supports for UNIX timestamps divided in
 	seconds+nanoseconds.
 
