@@ -1,5 +1,11 @@
 2016-09-02  Natalia Portillo  <claunia@claunia.com>
 
+	* NILFS2.cs:
+	* DiscImageChef.Filesystems.csproj: Adds support for NILFS2
+	filesystem.
+
+2016-09-02  Natalia Portillo  <claunia@claunia.com>
+
 	* F2FS.cs:
 	* DiscImageChef.Filesystems.csproj: Adds support for F2FS.
 
